# Dashboard_P5

./: .gitignore  CMakeLists.txt  crash_log.txt  partitions.csv  sdkconfig.backup  sdkconfig.broken  sdkconfig.defaults
components/claw_modules/claw_event_router/: CMakeLists.txt
components/common/app_claw/: CMakeLists.txt  Kconfig  idf_component.yml
components/es8311/: CMakeLists.txt  es8311.c
components/esp_lcd_ili9881c/: esp_lcd_ili9881c.c
components/esp_lcd_touch_gt9271/: CMakeLists.txt  esp_lcd_touch_gt9271.c  idf_component.yml
components/esp_lcd_touch_gt9271/include/: esp_lcd_touch_gt9271.h
main/: CMakeLists.txt  Kconfig.projbuild  ai_commands.c  ai_commands.h  ai_config.h  ai_manager.c  ai_manager.h  audio_manager.c  audio_manager.c_temp  audio_manager.h  background_task.c  background_task.h  board_init.c  can_definitions.h  can_logger.c  can_logger.h  can_manager.c  can_manager.h  can_parser.c  can_parser.h  can_websocket.c  display_init.h  ecu_data.c  ecu_data.h  idf_component.yml  lua_manager.c  lua_manager.h  main.c  main_gui.c  main_gui.h  sd_card_manager.c  sd_card_manager.h  settings_manager.c  settings_manager.h  telegram_manager.c  telegram_manager.h  web_server.c  web_server.h  wifi_controller.c  wifi_controller.h  (+5 more)
main/include/: can_websocket.h
main/ui/: CMakeLists.txt  settings_config.c  settings_config.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_layout_manager.c  ui_layout_manager.h  ui_screen_manager.c  ui_screen_manager.h  ui_sound_selector.c  ui_sound_selector.h  ui_updates.c  ui_updates.h  ui_wifi_settings.c  ui_wifi_settings.h
main/ui/components/: ui_comp_hook.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_Screen5.c  ui_Screen5.h  ui_Screen6.c  ui_Screen6.h  ui_Screen7.c  ui_Screen7.h  ui_Screen8.c  ui_Screen8.h
main/web/: joystick.html
